--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,5 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/src/WebApp/WebPushExample/wwwroot/wp-sw.js
+/src/WebApp/WebPushExample/wwwroot/js/dist
